# musicbot

./: .gitignore  README.md  bot.py  flake.nix  pyproject.toml
.github/workflows/: test.yml
