[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rubychan"
version = "0.1.0"
authors = [{ name = "Connor", email = "rubychan@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
keywords = ["discord", "bot", "music", "yt-dlp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Chat"
]

dependencies = [
    "discord-py[voice]>=2.6.4",
    "yt-dlp>=2026.3.17",
]

[project.scripts]
rubychan-bot = "bot:main"
